DemoSite/demo-site-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-site
  namespace: demo-site
  labels:
    app: demo-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-site
  template:
    metadata:
      labels:
        app: demo-site
    spec:
      containers:
        - name: demo-site-container
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          volumeMounts:
            - name: ssv
              mountPath: /usr/share/nginx/html
      volumes:
        - name: ssv
          persistentVolumeClaim:
            claimName: demo-site-pvc
