DemoSite/demo-site-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-site-service
  namespace: demo-site
spec:
  selector:
    app: demo-site
  ports:
    - protocol: TCP
      port: 80
